--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enea-entertainment/animjs",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Lightweight tweening library",
   "author": "Martin Filo <animjs@enea.sk> (https://www.enea.sk/)",
   "homepage": "https://github.com/EneaEntertainment/animjs#readme",
@@ -19,7 +19,8 @@
   "keywords": [
     "tween",
     "timeline",
-    "animation"
+    "animation",
+    "array"
   ],
   "scripts": {
     "lint": "eslint \"src/**/*.js\"",
