--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enea-entertainment/animjs",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "description": "Lightweight tweening library",
   "author": "Martin Filo <animjs@enea.sk> (https://www.enea.sk/)",
   "homepage": "https://github.com/EneaEntertainment/animjs#readme",
@@ -27,19 +27,19 @@
   "scripts": {
     "lint": "eslint \"src/**/*.js\"",
     "lintfix": "eslint \"src/**/*.js\" --fix",
-    "prebuild": "rimraf _dist/* && mkdirp _dist/",
+    "prebuild": "rimraf _dist/*",
     "build": "rollup -c"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@rollup/plugin-babel": "^5.2.1",
-    "@rollup/plugin-node-resolve": "^10.0.0",
-    "@rollup/plugin-replace": "^2.3.4",
+    "@babel/core": "^7.13.13",
+    "@babel/preset-env": "^7.13.12",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-replace": "^2.4.2",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.13.0",
+    "eslint": "^7.22.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.33.1",
+    "rollup": "^2.43.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2"
   },
